language/move-lang/tests/move_check/typing/binary_add_invalid.exp
error: 

   ┌── tests/move_check/typing/binary_add_invalid.move:8:9 ───
   │
 8 │         false + true;
   │         ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
   │         ^^^^^ Invalid argument to '+'
   │

error: 

   ┌── tests/move_check/typing/binary_add_invalid.move:8:9 ───
   │
 8 │         false + true;
   │         ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
   │                 ^^^^ Invalid argument to '+'
   │

error: 

   ┌── tests/move_check/typing/binary_add_invalid.move:9:9 ───
   │
 9 │         1 + false;
   │         - The type: integer
   │             ----- Is not compatible with: 'bool'
   │             ^^^^^ Incompatible arguments to '+'
   │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:10:9 ───
    │
 10 │         false + 1;
    │         ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
    │         ^^^^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:10:9 ───
    │
 10 │         false + 1;
    │         ----- Is not compatible with: 'bool'
    │                 - The type: integer
    │                 ^ Incompatible arguments to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:10:9 ───
    │
 10 │         false + 1;
    │         ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
    │                 ^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:11:9 ───
    │
 11 │         0x0 + 0x1;
    │         --- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │         ^^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:11:9 ───
    │
 11 │         0x0 + 0x1;
    │         --- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │               ^^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:12:13 ───
    │
 12 │         (0: u8) + (1: u128);
    │             -- The type: 'u8'
    │                   ^^^^^^^^^ Incompatible arguments to '+'
    │                       ---- Is not compatible with: 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:7:23 ───
    │
  7 │     fun t0(x: u64, r: R, s: S) {
    │                       - Found: '0x8675309::M::R'. But expected: 'u8', 'u64', 'u128'
    ·
 13 │         r + r;
    │         ^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:3:5 ───
    │
  3 │     resource struct R {
    │     -------- Is found to be a non-copyable type here
    ·
  7 │     fun t0(x: u64, r: R, s: S) {
    │                       - The type: '0x8675309::M::R'
    ·
 13 │         r + r;
    │         ^^^^^ Cannot ignore resource values. The value must be used
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:7:23 ───
    │
  7 │     fun t0(x: u64, r: R, s: S) {
    │                       - Found: '0x8675309::M::R'. But expected: 'u8', 'u64', 'u128'
    ·
 13 │         r + r;
    │             ^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:7:29 ───
    │
  7 │     fun t0(x: u64, r: R, s: S) {
    │                             - Found: '0x8675309::M::S'. But expected: 'u8', 'u64', 'u128'
    ·
 14 │         s + s;
    │         ^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:7:29 ───
    │
  7 │     fun t0(x: u64, r: R, s: S) {
    │                             - Found: '0x8675309::M::S'. But expected: 'u8', 'u64', 'u128'
    ·
 14 │         s + s;
    │             ^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:15:9 ───
    │
 15 │         1 + false + 0x0 + 0;
    │         ^^^^^^^^^ Invalid argument to '+'
    │             ----- Found: '_'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:15:9 ───
    │
 15 │         1 + false + 0x0 + 0;
    │         ^^^^^^^^^^^^^^^ Invalid argument to '+'
    │                     --- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:15:9 ───
    │
 15 │         1 + false + 0x0 + 0;
    │         - The type: integer
    │             ----- Is not compatible with: 'bool'
    │             ^^^^^ Incompatible arguments to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:15:13 ───
    │
 15 │         1 + false + 0x0 + 0;
    │             ----- Found: '_'. But expected: 'u8', 'u64', 'u128'
    │                     ^^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:15:21 ───
    │
 15 │         1 + false + 0x0 + 0;
    │                     --- Is not compatible with: 'address'
    │                           - The type: integer
    │                           ^ Incompatible arguments to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:15:21 ───
    │
 15 │         1 + false + 0x0 + 0;
    │                     --- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │                           ^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:16:9 ───
    │
 16 │         () + ();
    │         -- Found: '()'. But expected: 'u8', 'u64', 'u128'
    │         ^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:16:9 ───
    │
 16 │         () + ();
    │         -- Found: '()'. But expected: 'u8', 'u64', 'u128'
    │              ^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:17:9 ───
    │
 17 │         1 + ();
    │         - The type: integer
    │             -- Is not compatible with: '()'
    │             ^^ Incompatible arguments to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:18:9 ───
    │
 18 │         (0, 1) + (0, 1, 2);
    │         ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │         ^^^^^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:18:9 ───
    │
 18 │         (0, 1) + (0, 1, 2);
    │         ------ The expression list type of length 2: '({integer}, {integer})'
    │                  --------- Is not compatible with the expression list type of length 3: '({integer}, {integer}, {integer})'
    │                  ^^^^^^^^^ Incompatible arguments to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:18:9 ───
    │
 18 │         (0, 1) + (0, 1, 2);
    │         ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │                  ^^^^^^^^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:19:9 ───
    │
 19 │         (1, 2) + (0, 1);
    │         ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │         ^^^^^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/typing/binary_add_invalid.move:19:9 ───
    │
 19 │         (1, 2) + (0, 1);
    │         ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │                  ^^^^^^ Invalid argument to '+'
    │

